name:                telegram
version:             0.1.0.0
synopsis:            Telegram API client
description:         Telegram API client
license:             GPL-2
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Telegram
  build-depends:       base >=4.8 && <4.9,
                       aeson >=0.9 && <0.10,
                       url >=2.1 && <2.2,
                       http-conduit >=2.1 && <2.2,
                       bytestring >0.10 && <0.11,
                       data-default >=0.5,
                       utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
