name:                telegram
version:             0.1.0.0
synopsis:            Telegram API client
description:         Telegram API client
license:             GPL-2
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Telegram.Base,
                       Network.Telegram.RequestTypes,
                       Network.Telegram.ResponseTypes
  build-depends:       base >=4.8 && <4.9,
                       url,
                       http-conduit,
                       bytestring,
                       data-default,
                       utf8-string,
                       aeson,
                       base,
                       either,
                       QuickCheck,
                       servant,
                       servant-client,
                       servant-jquery,
                       servant-server,
                       text,
                       wai,
                       warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
